# unisim

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  metal_bench.csv
src/: main.cpp
src/compute/: compute_backend.hpp  cpu_backend.cpp  cpu_backend.hpp  cuda_backend.cu  cuda_backend.hpp  cuda_backend_stub.cpp  metal_backend.hpp  metal_backend.mm  metal_backend_stub.cpp  nbody.metal
src/initial_conditions/: binary_star.cpp  binary_star.hpp  black_hole.cpp  black_hole.hpp  elliptical_galaxy.cpp  elliptical_galaxy.hpp  galaxy_collision.cpp  galaxy_collision.hpp  initializer.hpp  random.cpp  random.hpp  solar_system.cpp  solar_system.hpp  spiral_galaxy.cpp  spiral_galaxy.hpp
src/rendering/: renderer.hpp  renderer_2d.cpp  renderer_2d.hpp  renderer_3d.cpp  renderer_3d.hpp  renderer_3d_opengl.cpp  renderer_3d_opengl.hpp
src/simulation/: body.hpp  parallel_utils.hpp  universe.hpp  vector3d.hpp
src/simulation/force_computers/: barnes_hut.cpp  barnes_hut.hpp  brute_force.cpp  brute_force.hpp  fast_multipole.cpp  fast_multipole.hpp  force_computer.hpp  metal_compute.cpp  metal_compute.hpp
src/simulation/integrators/: euler.cpp  euler.hpp  integrator.hpp  leapfrog.cpp  leapfrog.hpp  metal_integrator.hpp  runge_kutta.cpp  runge_kutta.hpp  verlet.cpp  verlet.hpp
src/ui/: control_panel.cpp  control_panel.hpp  main_window.cpp  main_window.hpp  metrics_monitor.cpp  metrics_monitor.hpp  scenario_generator.cpp  scenario_generator.hpp  viewport.cpp  viewport.hpp
tests/: benchmark.cpp  physics_regression.cpp
